# convertapitos

./: .dockerignore  .env.development  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml
bindings/: AppResponse.ts  DataErr.ts  ImageResponse.ts
public/: index.html
src/: main.rs  types.rs
src/common/types/: api_types.rs  app_types.rs  mod.rs
src/common/utils/: files.rs  jobs.rs
src/image/: image_controller.rs  image_service.rs  mod.rs  types.rs  utils.rs
src/text/: mod.rs  text_controller.rs  text_service.rs  types.rs
src/types/: mod.rs  types_controller.rs  types_service.rs
