[package]
name = "convertapitos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
image = "0.25.2"
salvo = { version = "0.74.2", features = ["logging", "cors", "serve-static"] }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0.2", features = ["derive"] }
thiserror = "2.0.4"
chrono = "0.4.38"
tokio-cron-scheduler = "0.13.0"
rand = "0.8.5"
ts-rs = "10.0.0"
tts_rust = "0.3.5"

[dev-dependencies]
cargo-watch = "8.5.2"
